# ros2-autonomous-driving-stack

./: README.md
docker/: Dockerfile  docker-compose.yml
docs/: launch-flow.md  qos-design.md  recruiter-summary.md  ros2-node-graph.md  tf-tree.md  topic-interface.md
ros2-autonomous-driving-stack/: README.md
ros2-autonomous-driving-stack/docs/: architecture.md  failure-cases.md
ros2-autonomous-driving-stack/scripts/: build.sh  inspect_topics.sh  plot_trajectory.py  record_bag.sh  run_stack.sh
ros2-autonomous-driving-stack/src/av_bringup/config/: vehicle.yaml
ros2-autonomous-driving-stack/src/av_bringup/launch/: full_stack.launch.py  planning_control.launch.py
ros2-autonomous-driving-stack/src/av_control/: CMakeLists.txt
ros2-autonomous-driving-stack/src/av_control/config/: control.yaml
ros2-autonomous-driving-stack/src/av_localization/: CMakeLists.txt
ros2-autonomous-driving-stack/src/av_localization/include/av_localization/: ekf_localizer.hpp  gnss_imu_fusion.hpp
ros2-autonomous-driving-stack/src/av_localization/src/: gnss_imu_fusion.cpp
ros2-autonomous-driving-stack/src/av_msgs/: package.xml
ros2-autonomous-driving-stack/src/av_msgs/msg/: DetectedObjectArray.msg  TrackedObject.msg  TrackedObjectArray.msg
ros2-autonomous-driving-stack/src/av_perception/: CMakeLists.txt  package.xml
ros2-autonomous-driving-stack/src/av_perception/include/av_perception/: tracking_node.hpp
ros2-autonomous-driving-stack/src/av_perception/src/: object_detector_node.cpp
ros2-autonomous-driving-stack/src/av_planning/: CMakeLists.txt  package.xml
ros2-autonomous-driving-stack/src/av_planning/config/: planner.yaml
ros2-autonomous-driving-stack/src/av_planning/include/av_planning/: behavior_planner.hpp
ros2-autonomous-driving-stack/src/av_planning/src/: behavior_planner.cpp  global_planner.cpp
ros2-autonomous-driving-stack/src/av_sensing/: CMakeLists.txt
ros2-autonomous-driving-stack/src/av_sensing/config/: camera.yaml
ros2-autonomous-driving-stack/src/av_sensing/include/av_sensing/: camera_preprocessor.hpp  lidar_preprocessor.hpp
ros2-autonomous-driving-stack/src/av_sensing/src/: camera_preprocessor.cpp
scripts/: replay_bag.sh
src/av_bringup/: CMakeLists.txt  package.xml
src/av_bringup/config/: qos.yaml  sensors.yaml
src/av_bringup/launch/: perception_only.launch.py
src/av_control/: package.xml
src/av_control/include/av_control/: pid_speed_controller.hpp  pure_pursuit_controller.hpp
src/av_control/src/: pid_speed_controller.cpp  pure_pursuit_controller.cpp
src/av_localization/: package.xml
src/av_localization/config/: ekf.yaml
src/av_localization/src/: ekf_localizer.cpp
src/av_msgs/: CMakeLists.txt
src/av_msgs/msg/: DetectedObject.msg  TrajectoryPoint.msg  TrajectoryPointArray.msg  VehicleState.msg
src/av_msgs/srv/: ResetScenario.srv
src/av_perception/config/: perception.yaml
src/av_perception/include/av_perception/: object_detector_node.hpp
src/av_perception/src/: tracking_node.cpp
src/av_planning/include/av_planning/: global_planner.hpp  trajectory_generator.hpp
src/av_planning/src/: trajectory_generator.cpp
src/av_sensing/: package.xml
src/av_sensing/config/: lidar.yaml
src/av_sensing/src/: lidar_preprocessor.cpp
src/av_vehicle_interface/: CMakeLists.txt  package.xml
src/av_vehicle_interface/config/: vehicle_interface.yaml
src/av_vehicle_interface/include/av_vehicle_interface/: can_gateway_node.hpp  vehicle_command_adapter.hpp
src/av_vehicle_interface/src/: can_gateway_node.cpp  vehicle_command_adapter.cpp
tests/integration/: test_launch_stack.py  test_topic_contract.py
tests/unit/: test_controller.cpp  test_planner.cpp
