<?xml version="1.0"?>
<package format="3">
  <name>av_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and system-wide configuration for the AV stack</description>
  <maintainer email="hoho121129@gmail.com">Ho-yoon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>av_msgs</exec_depend>
  <exec_depend>av_sensing</exec_depend>
  <exec_depend>av_localization</exec_depend>
  <exec_depend>av_perception</exec_depend>
  <exec_depend>av_planning</exec_depend>
  <exec_depend>av_control</exec_depend>
  <exec_depend>av_vehicle_interface</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
