<?xml version="1.0"?>
<package format="3">
  <name>av_localization</name>
  <version>0.1.0</version>
  <description>EKF-based GNSS+IMU localization</description>
  <maintainer email="hoho121129@gmail.com">Ho-yoon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>GeographicLib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
