<?xml version="1.0"?>
<package format="3">
  <name>av_sensing</name>
  <version>0.1.0</version>
  <description>LiDAR and camera preprocessing nodes</description>
  <maintainer email="hoho121129@gmail.com">Ho-yoon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
